<resources>
    <string name="app_name">OMR</string>
    <string name="answer_key">Answer Key</string>
    <string name="select_the_number_of_questions">Select number of Questions</string>
    <string name="_20">20</string>
    <string name="_100">100</string>
    <string name="click_on_camera_icon_to_scan_your_omr_sheet">Click on Camera icon to scan your OMR Sheet</string>
    <string name="title_answer_key">Answer Key</string>
    <string name="save_answer_key">(Press back to save answer key)</string>
    <string name="omr_checker">OMR CHECKER</string>
    <string name="need_help_click_the_below_icon_to_view_tutorial">Need Help! Click the below icon to view tutorial</string>
    <string name="camera_permission_confirmation">Permission Granted</string>
    <string name="camera_permission_not_granted">Permission not Granted</string>
    <string name="picture_taken">Picture Taken!</string>
</resources>