<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">


    <Button
        android:id="@+id/b_answerkey"
        android:layout_width="129dp"
        android:layout_height="36dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/button_2"
        android:fontFamily="@font/short_stack"
        android:onClick="displayAnswerKey"
        android:text="@string/answer_key"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/tv_select" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="347dp"
        android:layout_height="349dp"
        android:layout_marginTop="115dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_brushsq"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="347dp"
        android:layout_height="349dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_select"
        app:srcCompat="@drawable/ic_brushsq3"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="347dp"
        android:layout_height="349dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_click"
        app:srcCompat="@drawable/ic_brushsq2"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/ib_camera"
        android:layout_width="133dp"
        android:layout_height="119dp"
        android:layout_marginTop="56dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/ic_camera"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/ib_tutorial"
        android:layout_width="151dp"
        android:layout_height="127dp"
        android:layout_marginTop="65dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/ic_book"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="242dp"
        android:layout_height="240dp"
        android:layout_marginStart="152dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_ul"
        tools:ignore="ContentDescription"/>

    <RadioButton
        android:id="@+id/rb_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:buttonTint="@color/green"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/_20"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/tv_select" />

    <RadioButton
        android:id="@+id/rb_100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:buttonTint="@color/green"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/_100"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.635"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/tv_select" />

    <TextView
        android:id="@+id/tv_select"
        android:layout_width="311dp"
        android:layout_height="47dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/short_stack"
        android:gravity="center"
        android:text="@string/select_the_number_of_questions"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.394" />

    <TextView
        android:id="@+id/tv_click"
        android:layout_width="299dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/short_stack"
        android:gravity="center"
        android:text="@string/click_on_camera_icon_to_scan_your_omr_sheet"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/b_answerkey" />

    <TextView
        android:id="@+id/tv_click1"
        android:layout_width="228dp"
        android:layout_height="82dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/short_stack"
        android:gravity="center"
        android:text="@string/need_help_click_the_below_icon_to_view_tutorial"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/tv_omr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/short_stack"
        android:text="@string/omr_checker"
        android:textColor="@color/dark"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>